-- Additive migration: keep existing orders, ledger entries and public IDs.
ALTER TABLE orders ADD COLUMN payment_expires_at TIMESTAMP WITH TIME ZONE;
ALTER TABLE orders ADD COLUMN commission_rate NUMERIC(5,4) NOT NULL DEFAULT 0.10;
ALTER TABLE orders ADD COLUMN return_deadline TIMESTAMP WITH TIME ZONE;
ALTER TABLE orders ADD COLUMN funds_released BOOLEAN NOT NULL DEFAULT FALSE;
ALTER TABLE orders ADD CONSTRAINT chk_orders_commission CHECK (commission_rate BETWEEN 0 AND 0.99);
UPDATE orders SET payment_expires_at = CURRENT_TIMESTAMP + INTERVAL '30 minutes'
WHERE status = 'CREATED' AND payment_status IN ('NOT_PAID', 'FAILED');
-- Do not retroactively open a new return window for historical completed orders.
UPDATE orders SET funds_released = TRUE WHERE status IN ('COMPLETED', 'CANCELLED');
CREATE INDEX idx_orders_expiry ON orders(status, payment_expires_at);
CREATE INDEX idx_orders_settlement ON orders(status, funds_released, return_deadline);

ALTER TABLE products ADD COLUMN hidden BOOLEAN NOT NULL DEFAULT FALSE;

ALTER TABLE wallet_accounts ADD COLUMN pending_balance NUMERIC(14,2) NOT NULL DEFAULT 0;
ALTER TABLE wallet_accounts ADD COLUMN withdrawal_reserved NUMERIC(14,2) NOT NULL DEFAULT 0;
ALTER TABLE wallet_accounts ADD CONSTRAINT chk_wallet_pending CHECK (pending_balance >= 0);
ALTER TABLE wallet_accounts ADD CONSTRAINT chk_wallet_reserved CHECK (withdrawal_reserved >= 0);
ALTER TABLE payment_transactions ADD COLUMN pending BOOLEAN NOT NULL DEFAULT FALSE;
ALTER TABLE payment_transactions ALTER COLUMN order_id DROP NOT NULL;
ALTER TABLE payment_transactions DROP CONSTRAINT chk_payment_transactions_type;
ALTER TABLE payment_transactions ADD CONSTRAINT chk_payment_transactions_type CHECK (type IN (
    'PAYMENT', 'SELLER_PAYOUT', 'PLATFORM_COMMISSION', 'REFUND',
    'SELLER_PAYOUT_REVERSAL', 'PLATFORM_COMMISSION_REVERSAL', 'WITHDRAWAL'));
ALTER TABLE payment_transactions ADD CONSTRAINT chk_transaction_order
    CHECK (order_id IS NOT NULL OR type = 'WITHDRAWAL');

-- Protect historical income for still-open paid orders before withdrawals are enabled.
UPDATE payment_transactions p SET pending = TRUE
FROM orders o WHERE o.id = p.order_id AND o.payment_status = 'PAID'
AND o.status IN ('CONFIRMED', 'PROCESSING') AND p.status = 'COMPLETED'
AND p.type IN ('SELLER_PAYOUT', 'PLATFORM_COMMISSION');
UPDATE wallet_accounts w
SET pending_balance = held.amount, balance = w.balance - held.amount
FROM (SELECT user_id, SUM(amount) AS amount FROM payment_transactions WHERE pending = TRUE GROUP BY user_id) held
WHERE held.user_id = w.user_id;
-- A negative legacy balance aborts this entire migration instead of inventing money.

CREATE TABLE seller_orders (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    order_id BIGINT NOT NULL REFERENCES orders(id) ON DELETE RESTRICT,
    seller_id BIGINT NOT NULL REFERENCES users(id) ON DELETE RESTRICT,
    total_amount NUMERIC(14,2) NOT NULL CHECK (total_amount > 0),
    status VARCHAR(30) NOT NULL CHECK (status IN ('NEW','ACCEPTED','PACKING','SHIPPED','DELIVERED','CANCELLED','RETURNED')),
    created_at TIMESTAMP WITH TIME ZONE NOT NULL,
    shipped_at TIMESTAMP WITH TIME ZONE,
    delivered_at TIMESTAMP WITH TIME ZONE,
    CONSTRAINT uk_seller_order UNIQUE(order_id, seller_id)
);
CREATE INDEX idx_seller_orders_history ON seller_orders(seller_id, created_at DESC, id DESC);
INSERT INTO seller_orders(order_id, seller_id, total_amount, status, created_at, delivered_at)
SELECT o.id, oi.seller_id, SUM(oi.total_price),
    CASE WHEN o.payment_status = 'REFUNDED' AND o.status = 'COMPLETED' THEN 'RETURNED'
         WHEN o.status = 'CANCELLED' THEN 'CANCELLED'
         WHEN o.status = 'COMPLETED' THEN 'DELIVERED'
         WHEN o.status = 'PROCESSING' THEN 'PACKING' ELSE 'NEW' END,
    o.created_at, o.delivered_at
FROM orders o JOIN order_items oi ON oi.order_id = o.id
GROUP BY o.id, oi.seller_id, o.payment_status, o.status, o.created_at, o.delivered_at;

CREATE TABLE audit_events (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    actor_id BIGINT REFERENCES users(id) ON DELETE RESTRICT,
    order_id BIGINT REFERENCES orders(id) ON DELETE RESTRICT,
    seller_id BIGINT REFERENCES users(id) ON DELETE RESTRICT,
    action VARCHAR(60) NOT NULL,
    previous_status VARCHAR(40), next_status VARCHAR(40), detail VARCHAR(1000),
    created_at TIMESTAMP WITH TIME ZONE NOT NULL
);
CREATE INDEX idx_audit_order ON audit_events(order_id, created_at, id);
CREATE INDEX idx_audit_actor ON audit_events(actor_id, created_at DESC);
INSERT INTO audit_events(order_id, action, next_status, detail, created_at)
SELECT id, 'LEGACY_ORDER_IMPORTED', status, 'State before workflow migration', CURRENT_TIMESTAMP FROM orders;

CREATE TABLE seller_applications (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT NOT NULL UNIQUE REFERENCES users(id) ON DELETE RESTRICT,
    status VARCHAR(30) NOT NULL CHECK (status IN ('PENDING','ACTIVE','REJECTED','BLOCKED')),
    reason VARCHAR(1000),
    created_at TIMESTAMP WITH TIME ZONE NOT NULL, decided_at TIMESTAMP WITH TIME ZONE
);
INSERT INTO seller_applications(user_id, status, created_at, decided_at)
SELECT DISTINCT ur.user_id, 'ACTIVE', CURRENT_TIMESTAMP, CURRENT_TIMESTAMP
FROM user_roles ur JOIN roles r ON r.id = ur.role_id WHERE r.name = 'SELLER';

CREATE TABLE return_requests (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    order_id BIGINT NOT NULL UNIQUE REFERENCES orders(id) ON DELETE RESTRICT,
    buyer_id BIGINT NOT NULL REFERENCES users(id) ON DELETE RESTRICT,
    reason VARCHAR(1000) NOT NULL,
    status VARCHAR(30) NOT NULL CHECK (status IN ('PENDING','APPROVED','REJECTED')),
    decision_reason VARCHAR(1000),
    requested_at TIMESTAMP WITH TIME ZONE NOT NULL, decided_at TIMESTAMP WITH TIME ZONE,
    restocked BOOLEAN NOT NULL DEFAULT FALSE
);

CREATE TABLE withdrawal_requests (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    seller_id BIGINT NOT NULL REFERENCES users(id) ON DELETE RESTRICT,
    card_id BIGINT NOT NULL REFERENCES payment_cards(id) ON DELETE RESTRICT,
    amount NUMERIC(14,2) NOT NULL CHECK (amount > 0),
    request_key VARCHAR(100) NOT NULL,
    status VARCHAR(30) NOT NULL CHECK (status IN ('PENDING','APPROVED','REJECTED')),
    decision_reason VARCHAR(1000),
    requested_at TIMESTAMP WITH TIME ZONE NOT NULL, decided_at TIMESTAMP WITH TIME ZONE,
    CONSTRAINT uk_withdrawal_key UNIQUE(seller_id, request_key)
);
CREATE INDEX idx_withdrawal_seller ON withdrawal_requests(seller_id, requested_at DESC);

CREATE TABLE platform_settings (
    id BIGINT PRIMARY KEY CHECK (id = 1),
    commission_rate NUMERIC(5,4) NOT NULL CHECK (commission_rate BETWEEN 0 AND 0.99)
);
INSERT INTO platform_settings(id, commission_rate) VALUES (1, 0.10);
