-- Virtual money accounts used by the MarketFlow payment simulation.
-- A seller has one personal wallet; the platform has one shared wallet.
CREATE TABLE wallet_accounts (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    user_id BIGINT,
    type VARCHAR(20) NOT NULL,
    pending_balance NUMERIC(14, 2) NOT NULL DEFAULT 0,
    available_balance NUMERIC(14, 2) NOT NULL DEFAULT 0,
    version BIGINT NOT NULL DEFAULT 0,
    created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
    updated_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT fk_wallet_accounts_user
        FOREIGN KEY (user_id)
        REFERENCES users (id)
        ON DELETE RESTRICT,

    CONSTRAINT chk_wallet_accounts_type
        CHECK (type IN ('SELLER', 'PLATFORM')),

    CONSTRAINT chk_wallet_accounts_pending_balance
        CHECK (pending_balance >= 0),

    CONSTRAINT chk_wallet_accounts_available_balance
        CHECK (available_balance >= 0),

    CONSTRAINT chk_wallet_accounts_owner
        CHECK (
            (type = 'SELLER' AND user_id IS NOT NULL)
            OR
            (type = 'PLATFORM' AND user_id IS NULL)
        )
);

-- A user cannot have more than one seller wallet.
CREATE UNIQUE INDEX uk_seller_wallet_user
    ON wallet_accounts (user_id)
    WHERE type = 'SELLER';

-- MarketFlow has exactly one shared platform wallet.
CREATE UNIQUE INDEX uk_platform_wallet
    ON wallet_accounts (type)
    WHERE type = 'PLATFORM';

INSERT INTO wallet_accounts (
    user_id,
    type,
    pending_balance,
    available_balance
)
VALUES (
    NULL,
    'PLATFORM',
    0,
    0
);

-- Create wallets for sellers that already exist when this migration runs.
INSERT INTO wallet_accounts (
    user_id,
    type,
    pending_balance,
    available_balance
)
SELECT DISTINCT
    user_roles.user_id,
    'SELLER',
    0,
    0
FROM user_roles
JOIN roles
    ON roles.id = user_roles.role_id
WHERE roles.name = 'SELLER'
ON CONFLICT DO NOTHING;
