-- Transactional Outbox сохраняет бизнес-событие в одной транзакции с изменениями заказа и денег.
CREATE TABLE outbox_events (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    event_id UUID NOT NULL,
    event_type VARCHAR(60) NOT NULL,
    routing_key VARCHAR(100) NOT NULL,
    aggregate_id BIGINT,
    payload TEXT NOT NULL,
    status VARCHAR(20) NOT NULL DEFAULT 'NEW',
    attempts INTEGER NOT NULL DEFAULT 0,
    available_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
    created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,
    published_at TIMESTAMP WITH TIME ZONE,
    last_error VARCHAR(1000),

    CONSTRAINT uk_outbox_events_event_id UNIQUE (event_id),
    CONSTRAINT chk_outbox_events_status CHECK (status IN ('NEW', 'PUBLISHED', 'FAILED')),
    CONSTRAINT chk_outbox_events_attempts CHECK (attempts >= 0)
);

CREATE INDEX idx_outbox_events_publish
    ON outbox_events (status, available_at, created_at, id);
