-- История заказа наполняется асинхронно consumer-ом общей очереди событий.
CREATE TABLE order_event_history (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    event_id UUID NOT NULL,
    order_id BIGINT,
    seller_order_id BIGINT,
    event_type VARCHAR(60) NOT NULL,
    previous_status VARCHAR(60),
    current_status VARCHAR(60),
    occurred_at TIMESTAMP WITH TIME ZONE NOT NULL,
    created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT uk_order_event_history_event_id UNIQUE (event_id),
    CONSTRAINT fk_order_event_history_order FOREIGN KEY (order_id)
        REFERENCES orders (id) ON DELETE RESTRICT,
    CONSTRAINT fk_order_event_history_seller_order FOREIGN KEY (seller_order_id)
        REFERENCES seller_orders (id) ON DELETE RESTRICT
);

CREATE INDEX idx_order_event_history_order
    ON order_event_history (order_id, occurred_at, id);

-- Одна таблица хранит уведомления покупателей и продавцов.
CREATE TABLE notifications (
    id BIGINT GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
    event_id UUID NOT NULL,
    user_id BIGINT NOT NULL,
    recipient_type VARCHAR(20) NOT NULL,
    title VARCHAR(150) NOT NULL,
    message VARCHAR(1000) NOT NULL,
    is_read BOOLEAN NOT NULL DEFAULT FALSE,
    created_at TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT CURRENT_TIMESTAMP,

    CONSTRAINT fk_notifications_user FOREIGN KEY (user_id)
        REFERENCES users (id) ON DELETE RESTRICT,
    CONSTRAINT chk_notifications_recipient_type CHECK (recipient_type IN ('BUYER', 'SELLER')),
    CONSTRAINT uk_notifications_event_user_type UNIQUE (event_id, user_id, recipient_type)
);

CREATE INDEX idx_notifications_user
    ON notifications (user_id, is_read, created_at DESC, id DESC);
