@startuml
title MarketFlow - Database ERD

hide methods
hide stereotypes
skinparam linetype ortho
skinparam shadowing false

entity users {
  * id : BIGINT <<PK>>
  --
  email : VARCHAR(320) <<UK>>
  password_hash : VARCHAR(255)
  display_name : VARCHAR(100)
  status : VARCHAR(30)
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity roles {
  * id : SMALLINT <<PK>>
  --
  name : VARCHAR(40) <<UK>>
}

entity user_roles {
  * user_id : BIGINT <<PK, FK>>
  * role_id : SMALLINT <<PK, FK>>
}

entity products {
  * id : BIGINT <<PK>>
  --
  seller_id : BIGINT <<FK>>
  name : VARCHAR(200)
  price : NUMERIC(12,2)
  quantity : INTEGER
  active : BOOLEAN
}

entity cart_items {
  * id : BIGINT <<PK>>
  --
  buyer_id : BIGINT <<FK>>
  product_id : BIGINT <<FK>>
  quantity : INTEGER
  selected : BOOLEAN
}

entity orders {
  * id : BIGINT <<PK>>
  --
  buyer_id : BIGINT <<FK>>
  status : VARCHAR(30)
  total_amount : NUMERIC(14,2)
  payment_status : VARCHAR(30)
  delivered_at : TIMESTAMPTZ
  created_at : TIMESTAMPTZ
  updated_at : TIMESTAMPTZ
}

entity order_items {
  * id : BIGINT <<PK>>
  --
  order_id : BIGINT <<FK>>
  product_id : BIGINT <<FK>>
  seller_id : BIGINT <<FK>>
  product_name : VARCHAR(200)
  unit_price : NUMERIC(12,2)
  quantity : INTEGER
  total_price : NUMERIC(14,2)
}

entity seller_orders {
  * id : BIGINT <<PK>>
  --
  order_id : BIGINT <<FK>>
  seller_id : BIGINT <<FK>>
  total_amount : NUMERIC(14,2)
  commission_rate : NUMERIC(5,4)
  commission_amount : NUMERIC(14,2)
  seller_amount : NUMERIC(14,2)
  settlement_status : VARCHAR(20)
  status : VARCHAR(30)
  created_at : TIMESTAMPTZ
  shipped_at : TIMESTAMPTZ
  delivered_at : TIMESTAMPTZ
}

entity payment_transactions {
  * id : BIGINT <<PK>>
  --
  order_id : BIGINT <<FK>>
  user_id : BIGINT <<FK>>
  payment_card_id : BIGINT <<FK>>
  seller_order_id : BIGINT <<FK>>
  wallet_account_id : BIGINT <<FK>>
  related_transaction_id : BIGINT <<FK>>
  type : VARCHAR(40)
  amount : NUMERIC(14,2)
  status : VARCHAR(30)
  idempotency_key : VARCHAR(150) <<UK>>
}

entity wallet_accounts {
  * id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  type : VARCHAR(20)
  pending_balance : NUMERIC(14,2)
  available_balance : NUMERIC(14,2)
}

entity outbox_events {
  * id : BIGINT <<PK>>
  --
  event_id : UUID <<UK>>
  event_type : VARCHAR(60)
  routing_key : VARCHAR(100)
  payload : TEXT
  status : VARCHAR(20)
  attempts : INTEGER
  available_at : TIMESTAMPTZ
}

entity order_event_history {
  * id : BIGINT <<PK>>
  --
  event_id : UUID <<UK>>
  order_id : BIGINT <<FK>>
  seller_order_id : BIGINT <<FK>>
  event_type : VARCHAR(60)
  previous_status : VARCHAR(60)
  current_status : VARCHAR(60)
  occurred_at : TIMESTAMPTZ
}

entity notifications {
  * id : BIGINT <<PK>>
  --
  event_id : UUID
  user_id : BIGINT <<FK>>
  recipient_type : VARCHAR(20)
  title : VARCHAR(150)
  is_read : BOOLEAN
}

entity payment_cards {
  * id : BIGINT <<PK>>
  --
  user_id : BIGINT <<FK>>
  card_token : VARCHAR(100) <<UK>>
  masked_number : VARCHAR(30)
  balance : NUMERIC(14,2)
  active : BOOLEAN
}

users ||--o{ user_roles
roles ||--o{ user_roles
users ||--o{ products : seller
users ||--o{ cart_items : buyer
products ||--o{ cart_items
users ||--o{ orders : buyer
orders ||--|{ order_items
products ||--o{ order_items
users ||--o{ order_items : seller
orders ||--|{ seller_orders
users ||--o{ seller_orders : seller
orders ||--o{ payment_transactions
users ||--o{ payment_transactions : buyer
payment_cards ||--o{ payment_transactions
users ||--o{ payment_cards
seller_orders ||--o{ payment_transactions
wallet_accounts ||--o{ payment_transactions
payment_transactions ||--o{ payment_transactions : reverses
users ||--o{ wallet_accounts
orders ||--o{ order_event_history
seller_orders ||--o{ order_event_history
users ||--o{ notifications

@enduml
